--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-selected svelte-kqij2n
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <script type="text/javascript" src="https://deforum.art/scripts/scripts.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet"> <!-- Add this line -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://deforum.art/styles/small.css">
+    <link rel="stylesheet" href="https://deforum.art/styles/styles/large.css" media="screen and (min-width: 1024px)">
+
+    <link rel="manifest" href="https://deforum.art/assets/icon/site.webmanifest">
+    <title>deforyum, deforyou, deforuim, deforum-ui</title>
+</head>
+
+<body class="home">
+
+    <header>
+        <canvas id="noiseCanvas" data-color="black"></canvas>
+        <script src="https://deforum.art/scripts/grid.js"></script>
+
+        <div id="logo">
+            <a href="https://deforum.art/">{d}</a>
+        </div>
+                <div id="header-intro">
+            <h1>deforUIm</h1>
+    <p>free deforum open source ui - free from 1111+forge extentions - stand-alone / ui project</p>
+            <a class="btn-atn2" href="https://deforum.studio/">GitHub</a>
+            <div id="btn-scrolldown">
+                <a href="#home-info"><img src="https://deforum.art/assets/down-arrow.svg"></a>
+            </div>
+        </div>
+    </header>
+
+<section id="home-info">
+
+
+
+</section>
+
+    <footer>
+        <div class="footer-wrapper clear">
+            <div class="footer-box">
+                <p>footer-box<br>
+                        <a href="/" onclick="javascript:gradioApp().getElementById('settings_restart_gradio').click(); return false">Reload UI</a>
+                </p>
+            </div>
+            <div class="some-bar">
+                <ul>
+                    <li><a href="https://discord.gg/deforum"><img src="https://deforum.art/assets/some/discord.svg"></a></li>
+                    <li><a href="https://twitter.com/deforum_art"><img src="https://deforum.art/assets/some/twitter.svg"></a></li>
+                    <li><a href="https://instagram.com/deforum_art"><img src="https://deforum.art/assets/some/instagram.svg"></a></li>
+                    <li><a href="https://www.youtube.com/@deforum_art"><img src="https://deforum.art/assets/some/youtube.svg"></a></li>
+                    <li><a href="https://github.com/deforum-art"><img src="https://deforum.art/assets/some/github.svg"></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="credits">
+            &copy; 2024 deforum llc
+        </div>
+    </footer>
+</body>
+
+</html>
