--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div id="logo">
             <a href="https://deforum.art/">{d}</a>
         </div>
-                <div id="header-intro">
+        <div id="header-intro">
             <h1>deforUIm</h1>
     <p>free deforum open source ui - free from 1111+forge extentions - stand-alone / ui project</p>
-            <a class="btn-atn2" href="https://deforum.studio/">GitHub</a>
+            <a class="btn-atn2" href="https://github.com/duelmas/defor-ui-um">GitHub (defor-ui-um)</a>
             <div id="btn-scrolldown">
                 <a href="#home-info"><img src="https://deforum.art/assets/down-arrow.svg"></a>
             </div>
