--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet"> <!-- Add this line -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://deforum.art/styles/small.css">
-    <link rel="stylesheet" href="https://deforum.art/styles/styles/large.css" media="screen and (min-width: 1024px)">
+    <link rel="stylesheet" href="https://deforum.art/styles/large.css" media="screen and (min-width: 1024px)">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <title>deforyum, deforyou, deforuim, deforum-ui</title>
 </head>
 
-<body class="home">
+<body class="bg-black">
 
     <header>
-<canvas id="noiseCanvas" data-color="black"></canvas>
-    <script src="https://deforum.art/scripts/grid.js"></script>
+        <canvas id="noiseCanvas" data-color="black"></canvas>
         <div id="logo">
             <a href="https://deforum.art/">{d}</a>
         </div>
@@ -91,7 +89,7 @@
 </div>
 </div>
 <div class="col">
-    <button class="btn btn-xl btn-dark">Interrupt</button> | <button class="btn btn-xl btn-light">Generate</button> 
+    <button class="btn btn-lg btn-dark">Interrupt</button> | <button class="btn btn-lg btn-light">Generate</button> 
 </div>
 </div>
 
