--- a/index.html
+++ b/index.html
@@ -33,19 +33,47 @@
         </div>
     </header>
 
-<section id="under-construction" class="container-fluid text-center btn-atn2">
-    <div class="container">
+<section id="under-construction" class="container-fluid btn-atn2">
+    <div class="container-fluid justify-content-start">
         <div class="row">
-            <div class="col">
+            <div class="col-9">
     Stable Diffusion Checkpoint Selector<br>
  <select name="checkpoint SD model" id="checkpoint SD model">
-    <option value="Jugg">Jugg</option>
+    <option value="Jugg">juggernautXL_v9Rdphoto2Lightning.safetensors</option>
     <option value="Custom">Custom</option>
     <option value="safetensor">safetensor</option>
     <option value="safetensor">safetensor</option>
   </select>
+
+<button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Stable Diffusion checkpoint: refresh">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
+  <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
+</svg>
+</button>
+SD VAE
+ <select name="SD VAE" id="SD VAE">
+    <option value="Automatic">Automatic</option>
+    <option value="None">None</option>
+  </select>
+<button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="SD VAE: refresh">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
+  <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
+</svg>
+</button>
+<div class="row">
+  <div class="col-auto">
+    <label for="clipsset" class="form-label">Clip skip</label>&nbsp;
+    <input type="range" class="form-control-range" id="clipsRange" min="1" max="12" oninput="clipsOutput.value = clipsRange.value; clipsNumber.value = clipsRange.value;">
+    <output name="clipsOutput" id="clipsOutput">1</output>
+  </div>
+  <div class="col-auto">
+    <input type="number" class="form-control" id="clipsNumber" min="1" max="12" oninput="clipsRange.value = clipsNumber.value; clipsOutput.value = clipsNumber.value;">
+  </div>
 </div>
-<div class="col">
+</div>
+<div class="col-3">
     <p>
         Model Repositories<br>
     <a href="#">HuggingFace</a> | <a href="#">CivitAI</a>
@@ -82,12 +110,20 @@
   <div class="tab-pane fade show active" id="Run-tab-pane" role="tabpanel" aria-labelledby="Run-tab" tabindex="0">
 
 <div class="row">
+Preview motion only. Uses a static picture for init, and draw motion reference rectangle.
+<div class="form-check">
+  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+  <label class="form-check-label" for="flexCheckDefault">
+    Motion preview mode (dry run).
+  </label>
+</div>
     <div class="col">
-<select class="form-select" aria-label="Sample">
-  <option selected>Select Sampler</option>
-  <option value="1">DPN++ SDE</option>
-  <option value="2">Euler</option>
-  <option value="3">Euler a</option>
+    <label for="sample_selector" class="form-label">Sample</label>
+    <select class="form-select" id="sample_selector" aria-label="Sample Selector">
+    <option selected>Euler</option>
+    <option value="1">DPN++ SDE</option>
+    <option value="2">Euler</option>
+    <option value="3">Euler a</option>
 </select>
     </div>
 <div class="col">
@@ -141,10 +177,32 @@ Border mode
   <div class="tab-pane fade" id="Output-tab-pane" role="tabpanel" aria-labelledby="Output-tab" tabindex="0">...</div>
 </div>
 </div>
-<div class="col">
+<div class="col text-center">
     <div class="btn-atn2">
+        Deforuim — version 0.01 | Git commit: Unknown<br>
     <button class="btn btn-lg btn-dark">Interrupt</button> | <button class="btn btn-lg btn-light">Generate</button>
     </div>
+<div class="video-container">
+                <video id="video" class="video-player img-fluid" controls>
+                        <source src="https://www.contrastruction.com/acidai/vid/psychedorum.mp4" type="video/mp4">
+                        <source src="video.ogg" type="video/ogg">
+                        Your browser does not support the video tag.
+                </video>
+    <div class="video-controls">
+                        <button class="play-button" onclick="playVideo()">Play</button>
+                        <button class="pause-button" onclick="pauseVideo()">Pause</button>
+                        <button class="fullscreen-button" onclick="toggleFullscreen()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrows-fullscreen" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707zm4.344 0a.5.5 0 0 1 .707 0l4.096 4.096V11.5a.5.5 0 1 1 1 0v3.975a.5.5 0 0 1-.5.5H11.5a.5.5 0 0 1 0-1h2.768l-4.096-4.096a.5.5 0 0 1 0-.707zm0-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707m-4.344 0a.5.5 0 0 1-.707 0L1.025 1.732V4.5a.5.5 0 0 1-1 0V.525a.5.5 0 0 1 .5-.5H4.5a.5.5 0 0 1 0 1H1.732l4.096 4.096a.5.5 0 0 1 0 .707"/>
+</svg></button>
+                        <button class="volume-button img-fluid" onclick="toggleVolume()">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-volume-up" viewBox="0 0 16 16">
+  <path d="M11.536 14.01A8.473 8.473 0 0 0 14.026 8a8.473 8.473 0 0 0-2.49-6.01l-.708.707A7.476 7.476 0 0 1 13.025 8c0 2.071-.84 3.946-2.197 5.303l.708.707z"/>
+  <path d="M10.121 12.596A6.48 6.48 0 0 0 12.025 8a6.48 6.48 0 0 0-1.904-4.596l-.707.707A5.483 5.483 0 0 1 11.025 8a5.483 5.483 0 0 1-1.61 3.89z"/>
+  <path d="M10.025 8a4.486 4.486 0 0 1-1.318 3.182L8 10.475A3.489 3.489 0 0 0 9.025 8c0-.966-.392-1.841-1.025-2.475l.707-.707A4.486 4.486 0 0 1 10.025 8M7 4a.5.5 0 0 0-.812-.39L3.825 5.5H1.5A.5.5 0 0 0 1 6v4a.5.5 0 0 0 .5.5h2.325l2.363 1.89A.5.5 0 0 0 7 12zM4.312 6.39 6 5.04v5.92L4.312 9.61A.5.5 0 0 0 4 9.5H2v-3h2a.5.5 0 0 0 .312-.11"/>
+</svg>
+                        </button>
+    </div>
+        </div>
 </div>
 </div>
 
@@ -176,6 +234,37 @@ front-end code with bootstrap 5.3
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+    </script>
+    <script type="text/javascript">
+        function playVideo() {
+        var video = document.getElementById("video");
+        video.play();
+}
+
+function pauseVideo() {
+        var video = document.getElementById("video");
+        video.pause();
+}
+
+function toggleFullscreen() {
+        var video = document.getElementById("video");
+        if (video.requestFullscreen) {
+            video.requestFullscreen();
+        } else if (video.webkitRequestFullscreen) {
+            video.webkitRequestFullscreen();
+        } else if (video.msRequestFullscreen) {
+            video.msRequestFullscreen();
+        }
+}
+
+function toggleVolume() {
+        var video = document.getElementById("video");
+        video.muted = !video.muted;
+}
+    </script>
 </body>
 
 </html>
