--- a/index.html
+++ b/index.html
@@ -234,37 +234,7 @@ front-end code with bootstrap 5.3
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-    </script>
-    <script type="text/javascript">
-        function playVideo() {
-        var video = document.getElementById("video");
-        video.play();
-}
-
-function pauseVideo() {
-        var video = document.getElementById("video");
-        video.pause();
-}
-
-function toggleFullscreen() {
-        var video = document.getElementById("video");
-        if (video.requestFullscreen) {
-            video.requestFullscreen();
-        } else if (video.webkitRequestFullscreen) {
-            video.webkitRequestFullscreen();
-        } else if (video.msRequestFullscreen) {
-            video.msRequestFullscreen();
-        }
-}
-
-function toggleVolume() {
-        var video = document.getElementById("video");
-        video.muted = !video.muted;
-}
-    </script>
+    <script src="js/dosed.js"></script>
 </body>
 
 </html>
